tests/NormalTests/paczka1/fuzzy1/60980779.err
Error in line 4: S536 Ak94 55,5
Error in line 10: KWa S963 11,3
Error in line 8: S536 A894 193,1
Error in line 15: S536 S536 43,1
Error in line 25: V8aJB A365 84,4
